--- a/src/Components/User/UserPanel.css
+++ b/src/Components/User/UserPanel.css
@@ -41,8 +41,13 @@
 
 .game-type-card p {
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
-
+.game-type-card-btn{
+    margin-left: 55px;
+}
 .game-type-sub {
     display: flex;
     margin: 10px;
